--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
             <%-partial('partials/map')%>
 
-            <h4> Последние важные события </h4>
+            <h4> Важные события </h4>
 
             <%-partial('partials/centralTable')%>
 
