1. Add popup menu for right tree 2. Fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,3 +31,13 @@ body {
 .info{
     display: none;
 }
+
+.area{
+    display: none;
+}
+.location-tree{
+    display: none;
+}
+.device-tree{
+    display: none;
+}
