--- a/views/partials/leftTree.ejs
+++ b/views/partials/leftTree.ejs
@@ -11,20 +11,28 @@
                             <%}%>
 
                             <%for(var l in device.device[r][0].area[a].l){%>
-                                <ul class="nav nav-list tree">
+                                <ul class="nav nav-list tree location-tree">
                                     <li><label style="display: inline" class="tree-toggle nav-header location"><%=device.device[r][0].area[a].l[l].n%></label>
                                         <%if('ok' == 'ok'){%>
                                         <span class="badge badge-success"></span>
                                         <%}%>
 
                                         <%for(var d in device.device[r][0].area[a].l[l].h){%>
-                                            <ul class="nav nav-list tree" id="<%=device.device[r][0].area[a].l[l].h[d].n%>">
+                                            <ul id="<%=device.device[r][0].area[a].l[l].h[d].n%>" class="nav nav-list tree device-tree">
                                                 <li>
-                                                    <a style="display: inline" class="device" data-toggle="popover" data-placement="right"><%=device.device[r][0].area[a].l[l].h[d].n%></a>
+                                                    <a href="#" style="display: inline" class="device" data-toggle="popover" data-placement="right"><%=device.device[r][0].area[a].l[l].h[d].n%></a>
 
-                                                        <%if("ok" == 'ok'){%>
-                                                            <span class="badge badge-success"></span>
-                                                        <%}%>
+                                                    <%if("ok" == 'ok'){%>
+                                                        <span class="badge badge-success"></span>
+                                                    <%}%>
+                                                    <div class="info">
+                                                        <p>Метрика 1: 40Mb</p>
+                                                        <p>Метрика 2: 4</p>
+                                                        <p>Метрика 3: 466</p>
+                                                        <p>Метрика 4: 1</p>
+                                                        <p>Метрика 5: 1</p>
+                                                    </div>
+
 
                                                  </li>
                                             </ul>
