--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
 
 <%block('title', error.message) %>
 
-<p> Извините, произошла ошибка! </p>
+<p class="lead"> Извините, произошла ошибка! </p>
 
-<p> <%=error.message%> </p>
+<p class="lead text-warning"> <%= error.message %> </p>
 
