--- a/views/partials/leftTree.ejs
+++ b/views/partials/leftTree.ejs
@@ -23,7 +23,7 @@
                                                     <a href="#" style="display: inline" class="device" data-toggle="popover" data-placement="right"><%=device.device[r][0].area[a].l[l].h[d].n%></a>
 
                                                     <%if("ok" == 'ok'){%>
-                                                        <span class="badge badge-success"></span>
+                                                        <span class="badge badge-success"><%=device.device[r][0].area[a].l[l].h[d].c%></span>
                                                     <%}%>
                                                     <div class="info">
                                                         <p>Метрика 1: 40Mb</p>
