--- a/views/layout/base.ejs
+++ b/views/layout/base.ejs
@@ -28,7 +28,7 @@
 
 <%- partial('../partials/topNavbar') %>
 
-<%- body - %>
+<%- body %>
 
 <script src="/vendor/bower_components/jquery/jquery.js"></script>
 <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
