--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
         <div class="span3">
 
         </div>
-        <div style="text-align: center" class="span7">
+        <div class="span7">
 
             <form class="form-horizontal login-form" name="login-form">
                 <span class="text-error error-block" style="text-align: center;"></span>
@@ -33,6 +33,7 @@
                     </div>
                 </div>
             </form>
+
 
         </div>
         <div class="span2">
