--- a/views/partials/bottomTable.ejs
+++ b/views/partials/bottomTable.ejs
@@ -2,33 +2,21 @@
     <thead>
     <tr>
         <th>#</th>
+        <th>Дата создания</th>
+        <th>Номер</th>
         <th>Описание</th>
-        <th>Дата</th>
-        <th>Состояние</th>
+        <th>Приоритет</th>
+        <th>Доложил</th>
     </tr>
     </thead>
+    <% for(var i in incidents) { %>
     <tr>
-        <td>1</td>
-        <td>TB - Monthly</td>
-        <td>01/04/2012</td>
-        <td>Approved</td>
-    <tr>
-        <td>1</td>
-        <td>TB - Monthly</td>
-        <td>01/04/2012</td>
-        <td>Approved</td>
+        <td><%= incidents[i].RN %></td>
+        <td><%= incidents[i].CREATIONDATE %></td>
+        <td><a href="#"><%= incidents[i].TICKETID %></a></td>
+        <td><%= incidents[i].DESCRIPTION %></td>
+        <td><%= incidents[i].INTERNALPRIORITY %></td>
+        <td><%= incidents[i].REPORTEDBY %></td>
     </tr>
-    <tr>
-        <td>1</td>
-        <td>TB - Monthly</td>
-        <td>01/04/2012</td>
-        <td>Approved</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>TB - Monthly</td>
-        <td>01/04/2012</td>
-        <td>Approved</td>
-    </tr>
-    </tr>
+    <% } %>
 </table>
