Add ping time metric

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
                 <input type="checkbox" id="chanel"> Каналы </input>
             </label>
 
-            <h5 style="text-align: left;"> Последние события </h5>
+            <!--            <h5 style="text-align: left;"> Последние события </h5>
 
-            <%- partial('partials/centralTable') %>
+            <%- partial('partials/centralTable') %>-->
 
             <h5 style="text-align: left"> Последние инциденты </h5>
 
