--- a/views/partials/topNavbar.ejs
+++ b/views/partials/topNavbar.ejs
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top" xmlns="http://www.w3.org/1999/html">
     <div class="navbar-inner">
         <div class="container-fluid">
-            <a class="brand" href="\">Федеральная служба охраны Российской Федерации</a>
+            <a class="brand" href="\portal">Федеральная служба охраны Российской Федерации</a>
 
             <div class="nav-collapse collapse">
                 <p class="navbar-text pull-right">
