Create client side templates

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,13 @@
 <div class="container-fluid" xmlns="http://www.w3.org/1999/html">
     <div class="row-fluid">
         <div class="span3">
-            <%- partial('partials/newTree') %>
+
+        <%- partial('partials/newTree') %>
 
         </div>
         <div class="span7">
 
             <%- partial('partials/map') %>
-
-            <label class="checkbox">
-                <input type="checkbox" id="chanel"> Каналы </input>
-            </label>
 
             <!--            <h5 style="text-align: left;"> Последние события </h5>
 
@@ -36,5 +33,11 @@
 </div>
 
 <script src="/vendor/bower_components/socket.io-client/dist/socket.io.js"></script>
-<script src="/js/stp.js"></script>
+<script src="/js/portal.js"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function () {
+        //save templates to variable
+        window.templates = <%-JSON.stringify(templates)%>;
+    });
+</script>
 
