--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -1,4 +1,9 @@
 <div class="map">
     <h5>Транспортная сесть пакетной коммутации спецсвязи ФСО Российской Федерации</h5>
     <object data="/images/map.svg" type="image/svg+xml" id="imap" width="100%" height="420"></object>
+
+    <label class="checkbox">
+        <input type="checkbox" id="chanel"> Каналы </input>
+    </label>
+
 </div>
