--- a/views/partials/newTree.ejs
+++ b/views/partials/newTree.ejs
@@ -3,7 +3,7 @@
     <ul style="margin-left: 0px">
         <% for(var r in device.device){ %>
         <li id="<%= device.device[r].name %>">
-            <span><i class="icon-plus-sign"></i></span> <a href="#"
+            <span><i class="icon-plus-sign"></i></span> <a class="region" href="#"
                                                            id="<%= device.device[r].name %>"><%= device.device[r].name %></a>
 
             <ul class="area">
