--- a/views/layout/base.ejs
+++ b/views/layout/base.ejs
@@ -15,6 +15,7 @@
 
     <script src="/vendor/bower_components/jquery/jquery.js"></script>
     <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/js/ejs.js"></script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
