add region maps

--- a/views/clientside/_tempNodeMap.ejs
+++ b/views/clientside/_tempNodeMap.ejs
@@ -1,2 +1,2 @@
 <h5>Транспортный узел&nbsp;<%= node.text %></h5>
-<img src="images/<%= node.text.toLowerCase() %>.png"/>
+<img src="/images/1.svg"/>
