--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -1,5 +1,5 @@
 <div class="map">
-    <h5>Транспортная сесть пакетной коммутации спецсвязи ФСО Российской Федерации</h5>
+    <h5>Транспортная сеть пакетной коммутации спецсвязи ФСО Российской Федерации</h5>
     <object data="/images/map.svg" type="image/svg+xml" id="imap" width="100%" height="420"></object>
 
     <label class="checkbox">
