--- a/views/partials/rightTreeTop3.ejs
+++ b/views/partials/rightTreeTop3.ejs
@@ -1,7 +1,9 @@
 <div class="well sidebar-nav">
     <ul class="nav nav-list">
         <ul class="nav nav-list">
-
+            <div class="progress progress-danger">
+                <div class="bar" style="width: 0px"></div>
+            </div>
 
         </ul>
     </ul>
