add region chunk scale

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <div class="row-fluid">
         <div class="span3">
 
-        <%- partial('partials/newTree') %>
+            <%- partial('partials/newTree') %>
 
         </div>
         <div class="span7">
@@ -34,6 +34,7 @@
 
 <script src="/vendor/bower_components/socket.io-client/dist/socket.io.js"></script>
 <script src="/js/portal.js"></script>
+<script src="/js/svg.js"></script>
 <script type="text/javascript">
     jQuery(document).ready(function () {
         //save templates to variable
