--- a/views/partials/newTree.ejs
+++ b/views/partials/newTree.ejs
@@ -32,6 +32,9 @@
                                     <span class="badge badge-success"><%= device.device[r].area[a].l[l].h[d].c %></span>
                                     <% } %>
                                     <div class="info">
+
+                                        <p class="ip">IP&nbsp;<b><%= device.device[r].area[a].l[l].h[d].ip %></b></p>
+
                                         <p class="rtt"></p>
 
                                         <p class="cpubusy"></p>
