--- a/views/partials/rightTreeTop3.ejs
+++ b/views/partials/rightTreeTop3.ejs
@@ -1,8 +1,25 @@
 <div class="well sidebar-nav">
     <ul class="nav nav-list">
         <ul class="nav nav-list">
+            <p>Netcool</p>
+
             <div class="progress progress-danger">
-                <div class="bar" style="width: 0px"></div>
+                <div class="bar netcool" style="width: 0px"></div>
+            </div>
+            <p>SCCD</p>
+
+            <div class="progress progress-danger">
+                <div class="bar sccd" style="width: 0px"></div>
+            </div>
+            <p>Wisla</p>
+
+            <div class="progress progress-danger">
+                <div class="bar wisla" style="width: 0px"></div>
+            </div>
+            <p>NCIM</p>
+
+            <div class="progress progress-danger">
+                <div class="bar ncim" style="width: 0px"></div>
             </div>
 
         </ul>
