--- a/views/layout/base.ejs
+++ b/views/layout/base.ejs
@@ -12,10 +12,9 @@
 
     <script type="text/javascript" src="/vendor/bower_components/jquery/jquery.min.js"></script>
 
-
-    <script src="/vendor/bower_components/jquery/jquery.js"></script>
     <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/js/ejs.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
