add region chunk scale

--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -84,14 +84,15 @@
     .hidden {
         visibility: hidden;
     }
-
     .chanel {
         stroke-width: 3;
+        stroke: #7e897e;
     }
-
     .selected {
         stroke-width: 5;
+        stroke: #0A970A
     }
+
 </style>
 <linearGradient
         id="linearGradient7975">
@@ -656,7 +657,7 @@
         class="chanel"
         id="1116528580"
         d="m 80.273015,228.18254 c 0.173678,-1.81057 2.339693,6.95829 2.580363,9.3527 4.340192,43.18024 -5.944088,60.91761 -14.283097,73.09127"
-        style="fill:none;stroke:#7e897e;stroke-width:3;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:0.92941176;stroke-dasharray:none;stroke-dashoffset:0;marker-end:none"
+        style="fill:none;astroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:0.92941176;stroke-dasharray:none;stroke-dashoffset:0;marker-end:none"
         sodipodi:nodetypes="csc"/>
 <path
         sodipodi:nodetypes="cc"
