remove region chunk scale

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
         <div class="span3">
 
             <%- partial('partials/newTree') %>
+            <%- partial('partials/leftTreeTop2') %>
 
         </div>
         <div class="span7">
