--- a/views/partials/leftTreeTop2.ejs
+++ b/views/partials/leftTreeTop2.ejs
@@ -1,5 +1,5 @@
-<div class="well sla breach" style="padding-left: 3px; padding-right: 5px;padding-top: 3px">
-    <h5>Нарушение SLA</h5>
+<div class="well unavailable" style="padding-left: 3px; padding-right: 5px;padding-top: 3px">
+    <h5>Недоступные устройства</h5>
     <ul>
         <% for(var r in wisla.serviceBaseDtos) { %>
         <% if(wisla.serviceBaseDtos[r].currentServiceStatus == "RED") { %>
