--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,12 +88,14 @@ h6, h5 {
     padding: 10px 5px 0 5px;
     position: relative
 }
+
 .tree li::before, .tree li::after {
     content: '';
     left: -20px;
     position: absolute;
     right: auto
 }
+
 .tree li::before {
     border-left: 1px solid #999;
     bottom: 50px;
@@ -101,12 +103,14 @@ h6, h5 {
     top: 0;
     width: 1px
 }
+
 .tree li::after {
     border-top: 1px solid #999;
     height: 20px;
     top: 25px;
     width: 25px
 }
+
 .tree li span {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -124,6 +128,7 @@ h6, h5 {
 .tree > ul > li::before, .tree > ul > li::after {
     border: 0
 }
+
 .tree li:last-child::before {
     height: 30px
 }
@@ -132,4 +137,8 @@ h6, h5 {
     background: #eee;
     border: 1px solid #94a0b4;
     color: #000
+}
+
+div.map {
+    text-align: center;
 }
