remove region chunk scale

--- a/views/clientside/_tempNodeMap.ejs
+++ b/views/clientside/_tempNodeMap.ejs
@@ -1,2 +1,2 @@
 <h5>Транспортный узел&nbsp;<%= node.text %></h5>
-<img src="/images/1.svg"/>
+<object data="/images/node/<%= node.text %>.svg" type="image/svg+xml" id="imap" width="710" height="600"></object>
