--- a/views/clientside/_tempRegionMap.ejs
+++ b/views/clientside/_tempRegionMap.ejs
@@ -1,2 +1,2 @@
 <h5>Транспортная сесть пакетной коммутации спецсвязи ФСО&nbsp;<%= node.text %></h5>
-<object data="/images/test.svg" type="image/svg+xml" id="imap" height="420"></object>
+<object data="/images/region/<%= node.text %>.svg" type="image/svg+xml" id="imap" height="420"></object>
