remove region chunk scale

--- a/views/clientside/_tempNetcoolAlert.ejs
+++ b/views/clientside/_tempNetcoolAlert.ejs
@@ -2,8 +2,7 @@
 <ul class="nav nav-list">
     <ul class="nav nav-list">
 
-        <li>Всего событий&nbsp;<span class="badge"><%= countEvents %></span></li>
-        <li>Недоступных устройств&nbsp;<span class="badge badge-success"><%= countDownDevices %></span></li>
+        <li>Недоступных устройств&nbsp;<span class="badge badge-success"><%= countEvents.length %></span></li>
 
     </ul>
 </ul>
