--- a/views/clientside/_tempUnavailableNode.ejs
+++ b/views/clientside/_tempUnavailableNode.ejs
@@ -2,7 +2,7 @@
 <ul>
     <% for(var r in unavailableNode) { %>
     <li>
-        <a href="" class="wisla chanel"><%= unavailableNode[r] %></a>
+        <a href="" class="wisla chanel"><%= unavailableNode[r].NodeAlias %></a>
     </li>
     <% } %>
 </ul>
