remove region chunk scale

--- a/views/partials/newTree.ejs
+++ b/views/partials/newTree.ejs
@@ -10,7 +10,7 @@
                 <% for(var a in device.device[r].area){ %>
                 <li>
                     <span><i class="icon-plus-sign"></i></span>
-                    <a href="" class="area"><%= device.device[r].area[a].n %></a>
+                    <a href="#" class="area"><%= device.device[r].area[a].n %></a>
                     <% if('ok' == 'ok'){ %>
                     <span class="badge"></span>
                     <% } %>
