--- a/views/partials/leftTreeTop2.ejs
+++ b/views/partials/leftTreeTop2.ejs
@@ -3,7 +3,7 @@
     <ul>
         <% for(var r in netcool.rowset.rows) { %>
         <li>
-            <a href="" class="wisla chanel"><%= netcool.rowset.rows[r].NodeAlias %></a>
+            <a href="#" class="unavailable node"><%= netcool.rowset.rows[r].Node %></a>
         </li>
         <% } %>
     </ul>
