--- a/views/partials/rightTreeTop2.ejs
+++ b/views/partials/rightTreeTop2.ejs
@@ -4,7 +4,7 @@
         <% for(var r in wisla.serviceBaseDtos) { %>
         <% if(wisla.serviceBaseDtos[r].currentServiceStatus == "RED") { %>
         <li>
-            <a href="" class="wisla chanel"><%= wisla.serviceBaseDtos[r].name %></a>
+            <a href="#" class="wisla chanel"><%= wisla.serviceBaseDtos[r].name %></a>
         </li>
         <% } %>
         <% } %>
