--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,9 @@
 
             <%- partial('partials/map') %>
 
-            <!--            <h5 style="text-align: left;"> Последние события </h5>
+            <h5 style="text-align: left"> События IBM SmartCloud ControlDesk </h5>
 
-            <%- partial('partials/centralTable') %>-->
-
-            <h5 style="text-align: left"> Последние инциденты </h5>
-
-            <%- partial('partials/bottomTable') %>
+            <%- partial('partials/eventsFromSmartCloud') %>
 
         </div>
         <div class="span2">
